feat: add eslint and prettier

--- a/src/containers/Todos/index.less
+++ b/src/containers/Todos/index.less
@@ -7,7 +7,7 @@
 }
 
 .clearfix:after {
-  content: "";
+  content: '';
   display: table;
   height: 0;
   clear: both;
@@ -43,7 +43,7 @@
     padding: 10px;
     font-size: 18px;
 
-    input[type=checkbox] {
+    input[type='checkbox'] {
       margin-right: 10px;
     }
 
@@ -56,7 +56,7 @@
 .todo-footer {
   margin-left: 10px;
 
-  input[type=checkbox] {
+  input[type='checkbox'] {
     margin-right: 10px;
   }
 }
