feat: add React16 Demo

--- a/src/containers/Other/index.less
+++ b/src/containers/Other/index.less
@@ -12,3 +12,17 @@
     margin-top: 40px;
   }
 }
+.newModal {
+  margin-left: 18px;
+}
+.modalBody {
+  padding: 20px;
+  color:#f00;
+  font-size: 18px;
+  h2 {
+    text-align: center;
+  }
+  p {
+    text-indent: 36px;
+  }
+}
