--- a/src/components/Exception/index.less
+++ b/src/components/Exception/index.less
@@ -1,45 +1,30 @@
 @import '~antd/lib/style/themes/default.less';
 
+@middleMargin: 100px;
 .exception {
   min-height: 500px;
-  &:after {
-    clear: both;
-    visibility: hidden;
-    font-size: 0;
-    height: 0;
-  }
-  .imgBlock {
-    float: left;
-    width: 62.5%;
-    padding-right: 152px;
-    zoom: 1;
-    &:before,
-    &:after {
-      content: ' ';
-      display: table;
-    }
-    &:after {
-      clear: both;
-      visibility: hidden;
-      font-size: 0;
-      height: 0;
-    }
-  }
-
-  .imgEle {
-    height: 360px;
-    width: 100%;
-    max-width: 430px;
-    float: right;
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-    background-size: contain;
+  padding-top: 60px;
+  .exceptionBody {
+    width: 50%;
+    box-sizing: border-box;
+    padding-right: @middleMargin/2;
+    text-align: right;
+    position: relative;
   }
 
   .content {
-    float: left;
-    height: 360px;
-    padding-top: 50px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 100%;
+    width: 100%;
+    .contentBody {
+      position: absolute;
+			top: 50%;
+			left: @middleMargin/2;
+      transform: translateY(-50%);
+      text-align: left;
+    }
     h1 {
       color: #434e59;
       font-size: 72px;
