--- a/src/pages/Login/index.less
+++ b/src/pages/Login/index.less
@@ -16,7 +16,7 @@
     height: 50px;
     line-height: 50px;
     background: rgba(255,255,255,0.3);
-    color: @heading-color;
+    // color: @heading-color;
     font-size: @sizeBig;
   }
 }
