--- a/src/asserts/css/mixins.less
+++ b/src/asserts/css/mixins.less
@@ -3,14 +3,11 @@
   zoom: 1;
   &:before,
   &:after {
-    content: " ";
+    content: '';
     display: table;
   }
   &:after {
     clear: both;
-    visibility: hidden;
-    font-size: 0;
-    height: 0;
   }
 }
 // 超出显示省略号
