--- a/src/asserts/css/vars.less
+++ b/src/asserts/css/vars.less
@@ -1,3 +1,5 @@
+@import '~antd/lib/style/themes/default.less';
+// body背景色
 @bodyBc: #F2F2F2;
 
 @borderColor: #f6f6f6;
@@ -9,27 +11,11 @@
 // color
 @black: rgba(0, 0, 0, 0.65);
 
-// antd-theme
-@primary-color: #AA0000;                      // 全局主色
-@link-color: #1890ff;                         // 链接色
-@success-color: #52c41a;                      // 成功色
-@warning-color: #faad14;                      // 警告色
-@error-color: #f5222d;                        // 错误色
-@font-size-base: 14px;                          // 主字号
-@heading-color: rgba(0, 0, 0, .85);             // 标题色
-@text-color: rgba(0, 0, 0, .65);                // 主文本色
-@text-color-secondary : rgba(0, 0, 0, .45);     // 次文本色
-@disabled-color : rgba(0, 0, 0, .25);           // 失效色
-@border-radius-base: 4px;                       // 组件/浮层圆角
-@border-color-base: #d9d9d9;                  // 边框色
-@box-shadow-base: 0 2px 8px rgba(0, 0, 0, .15);  // 浮层阴影
-
 @common-padding: 16px;
 
 // menu
 @sider-opened-width: 200px;
 @sider-collapsed-width: 50px; // 不要小于30px
-@menu-title-collapsed-paddingX: (@sider-collapsed-width - @sizeNomal) / 2;
 
 // header
 @header-height: 50px;
