feat: 添加modal全屏按钮

--- a/src/base/Modal/index.less
+++ b/src/base/Modal/index.less
@@ -1,20 +1,25 @@
 
+.modalTitle {
+  position: relative;
+}
+.screenIcon {
+  position: absolute;
+  top: 3px;
+  right: 16px;
+}
 
 :global {
-  .ant-modal-content {
-    border-radius: 0!important;
-  }
   .ant-modal-header {
     padding: 10px 24px!important;
-    border-radius: 0!important;
     border-color: #eee!important;
   }
   .ant-modal-close-x {
+    text-align: left!important;
+    width: 30px!important;
     height: 42px!important;
     line-height: 42px!important;
   }
   .ant-modal-footer {
     border: 0!important;
-    border-radius: 0!important;
   }
 }
