feat:add authCode

--- a/src/base/Modal/index.less
+++ b/src/base/Modal/index.less
@@ -6,6 +6,11 @@
   position: absolute;
   top: 3px;
   right: 16px;
+  cursor: pointer;
+  color: rgba(0, 0, 0, 0.45);
+  &:hover {
+    color: #3E3E3E;
+  }
 }
 
 :global {
