--- a/src/layout/index.less
+++ b/src/layout/index.less
@@ -67,7 +67,5 @@
     min-width: @sider-collapsed-width!important;
     width: @sider-collapsed-width!important;
   }
-  .ant-menu-inline-collapsed {
-    width: @sider-collapsed-width!important;
-  }
+  // menu折叠宽度在theme.js中配置
 }
