--- a/src/layout/TagBar.less
+++ b/src/layout/TagBar.less
@@ -13,7 +13,9 @@
   display: table-cell;
   width: @closeBtnWidth * 2;
   height: @closeBtnWidth * 2;
-  background-color: red;
+  vertical-align: middle;
+  text-align: center;
+  border-left: 1px solid @borderColor;
 }
 .tagList {
   display: table-cell;
@@ -29,15 +31,27 @@
   border-right: 1px solid @borderColor;
   cursor: pointer;
   .ellipsis;
+  &:after {
+    content: '';
+    width: 0%;
+    border-top: 1px solid #705b47;
+    position: absolute;
+    left: 0;
+    top: 0;
+    transition: width ease .4s;
+  }
   &:hover,
   &.active {
     background-color: @borderColor;
+    &:after {
+      width: 100%;
+    }
   }
   &.home {
     padding: 0 18px;
   }
 }
-.closeBtn {
+.tagBtn {
   width: @closeBtnWidth;
   .spanCenter(@closeBtnWidth);
   line-height: @closeBtnWidth + 2;
@@ -50,7 +64,7 @@
     color: #c2c2c2;
     transform: scale(0.7,0.7);
   }
-  &:hover {
+  &.closeBtn:hover {
     border-radius: 50%;
     background-color: #eee;
   }
