--- a/src/layout/TagBar.less
+++ b/src/layout/TagBar.less
@@ -34,7 +34,7 @@
   &:after {
     content: '';
     width: 0%;
-    border-top: 1px solid #705b47;
+    border-top: 1px solid #ada6a0;
     position: absolute;
     left: 0;
     top: 0;
