--- a/src/layout/index.less
+++ b/src/layout/index.less
@@ -35,7 +35,7 @@
   position: absolute;
   left: 0;
   right: 0;
-  top: @header-height;
+  top: @header-height + @closeBtnWidth * 2 + 3;
   bottom: 0;
   overflow-y: auto;
 }
